# Arc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FIX_SUMMARY.md  LICENSE  ML_INTEGRATION_README.md  MULTI_INPUT_MODEL_ISSUE.md  Makefile  PUBLISHING.md  README.md  REVIEW_EXECUTION_TRACKING.md  iris_diabetes_model.yaml  mkdocs.yml  pyproject.toml  test_arc_graph_implementation.py  test_generate_schema_cli.sh  test_model.yaml
.github/workflows/: ci.yml  docs.yml
docs/: arc-graph.md  arc-pipeline.md  index.md  output_design_implementation.md  output_design_spec.md  plugin_system.md  s3-setup.md  snowflake-setup.md
docs/api-reference/: arc-graph-spec.md  cli-commands.md
docs/concepts/: arc-graph.md  arc-knowledge.md  arc-pipeline.md  overview.md
docs/contributing/: architecture.md  development-setup.md  testing.md
docs/examples/: custom-architecture.md  diabetes-prediction.md
docs/examples/logistic_regression_console/: README.md  model.yaml  run_logistic_regression_console_demo.sh  trainer.yaml
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: data-loading.md  feature-engineering.md  making-predictions.md  model-evaluation.md  model-training.md
examples/logistic_regression_console/: README.md  model.yaml  run_logistic_regression_console_demo.sh
scripts/: README.md  extract_model_yaml.py  inspect_model_generator_prompts.py  quick_prompt_test.py  refactor_ml_tools.py  render_data_processor_prompt.py  render_model_prompt.py  start-arc.bat  start-arc.sh  test_clean_llm_response.py  test_dry_run_validator_fix.py  test_evaluation.py  test_ml_data.py  test_ml_evaluate.py  test_ml_model.py  test_ml_plan.py  test_model_generation.py  test_multi_input_training.py  test_prompt_generation.py  test_target_output_key_fix.py  test_trainer_loss_fix.py  test_training.py  train_diabetes_dcn.py  validate_binary_operations.py  validate_error_messages.py  validate_label_encoder.py
src/arc/: __init__.py  __main__.py  error_handling.py
src/arc/core/: __init__.py  agent.py  client.py  config.py  ml_plan.py
src/arc/database/: __init__.py  base.py  duckdb.py  manager.py
src/arc/editing/: __init__.py  base.py  diff_editor.py  editor_manager.py  search_replace.py  whole_file.py
src/arc/graph/: README.md  __init__.py  model_spec.md  models.py  spec.py  trainer_spec.md  validator.py
src/arc/jobs/: __init__.py  executor.py  manager.py  models.py
src/arc/ml/: __init__.py  artifacts.py  builder.py  callbacks.py  data.py  data_source_executor.py  dry_run_validator.py  evaluator.py  layers.py  metrics.py  param_converter.py  predictor.py  runtime.py  tensorboard.py  trainer.py  training.py  training_service.py  utils.py  visualization.py
src/arc/plugins/: __init__.py  builtin.py  hookspecs.py  manager.py
src/arc/templates/: system_prompt.j2  tools.yaml
src/arc/tools/: __init__.py  base.py  bash.py  data_process.py  data_processing.py  data_processor_generator.py  database_query.py  file_editor.py  knowledge.py  ml.py  ml_data.py  registry.py  schema_discovery.py  search.py  todo.py  tools.py
tensorboard/run_12254b1f-ef25-42f9-942d-2baeb8533ac0/: events.out.tfevents.1759904269.Mac.attlocal.net.11791.0
tensorboard/run_12868be8-e953-4090-9b1e-476e863a45e1/: events.out.tfevents.1759903982.Mac.attlocal.net.10373.0
tensorboard/run_46dc9ced-fdce-4220-9cf8-378a78a3e34a/: events.out.tfevents.1759903799.Mac.attlocal.net.8378.0
tensorboard/run_4d816b49-d7e5-4c89-ba9f-12feeaa61363/: events.out.tfevents.1759903125.Mac.attlocal.net.6023.0
tensorboard/run_88558bfa-77c9-494f-a645-dead741aa539/: events.out.tfevents.1759902392.Mac.attlocal.net.5682.0
tensorboard/run_8a065e78-979b-4463-9c63-ed0bf8a92b2d/: events.out.tfevents.1759904163.Mac.attlocal.net.11406.0
tensorboard/run_abcf4682-5b47-48ef-b20a-c014f8551966/: events.out.tfevents.1759904284.Mac.attlocal.net.11926.0
tensorboard/run_b2b2f994-85c7-4a00-8e66-4c70503f4f7b/: events.out.tfevents.1759903916.Mac.attlocal.net.9663.0
tensorboard/run_dd627e64-b9ff-4ecb-804a-47052a408236/: events.out.tfevents.1759903329.Mac.attlocal.net.6941.0
tensorboard/run_fafccc5d-02fa-4fae-a160-8eac8521ec68/: events.out.tfevents.1759904267.Mac.attlocal.net.11732.0
tests/: __init__.py  conftest.py  test_main.py  test_plan_execution_service.py  test_plan_executions_schema.py  test_snowflake_config.py
tests/core/: test_config.py  test_ml_plan.py
tests/database/: test_data_processor_service.py  test_duckdb.py  test_evaluator_service.py  test_evaluator_service_refactor.py  test_interactive_query_service.py  test_job_service.py  test_manager.py  test_model_service.py  test_plugin_service.py  test_snowflake_integration.py
tests/fixtures/: invalid_model.yaml  logistic_regression.yaml  simple_model.yaml
tests/graph/: test_components.py  test_evaluator_spec.py  test_model_builder.py  test_model_spec.py  test_parser.py  test_predictor_spec.py  test_trainer_spec.py  test_validator.py
tests/integration/: test_categorical_end_to_end.py  test_data_to_model_context_flow.py  test_e2e_workflow.py
tests/jobs/: __init__.py  test_executor.py  test_manager.py
tests/ml/: __init__.py  test_advanced_layers.py  test_artifacts.py  test_builder.py  test_custom_module_wrapper.py  test_dag_execution.py  test_data.py  test_data_source_executor.py  test_data_source_executor_ddl.py  test_diabetes_training.py  test_e2e_workflow.py  test_evaluator.py  test_feature_pipeline.py  test_label_encoder.py  test_layers.py  test_logistic_regression.py  test_metrics.py  test_ml_integration.py  test_ml_runtime.py  test_predictor.py  test_shape_validation.py  test_tensorboard.py  test_trainer.py  test_training.py  test_training_helpers.py  test_training_service_refactor.py  test_training_service_runtime.py  test_transformer_example.py  test_utils.py  test_vocabulary_persistence.py
tests/plugins/: test_plugin_system.py
tests/tools/: test_database_query_tool.py  test_knowledge_tool.py  test_ml_data_tool.py
tests/ui/: test_cli_ml_commands.py
tests/utils/: __init__.py  test_validation_ddl.py
(+152 files in other folders)
